# patton

./: CMakeLists.txt  CMakePresets.json  README.md  _config.yml
_includes/: nav-items.html
benchmark/: CMakeLists.txt  benchmark-thread_squad.cpp  main.cpp  params.hpp
ci/: azure-pipelines.yml  vcpkg.json
doc/: Reference.md
include/patton/: buffer.hpp  memory.hpp  thread_squad.hpp
include/patton/detail/: lazy-init.hpp  memory.hpp  thread_squad.hpp  transaction.hpp
src/: CMakeLists.txt  cpuinfo.cpp  memory.cpp  thread_squad.cpp
test/: CMakeLists.txt  test-thread.cpp  test-thread_squad.cpp
